# agora

agora-sdk/: Makefile  agora_interface.i  agora_interface_wrap.c  client.py  pyproject.toml  setup.py
agora-sdk/agora_rtc_sdk/: pyproject.toml
agora-sdk/agora_rtc_sdk/example/: README_PYBIND.md
agora-sdk/agora_rtc_sdk/example/sample_pybinds/: CMakeLists.txt  PROMPT_TEMPLATES.py  chat_utils.py  compare_file.py  crash_context_v1  model_vad.py  old_receive.cpp  pybind_audio.cpp  pybind_audio_receive.cpp  pybind_audio_receive_callback.cpp  receive_audio.py  receive_audio_callback.py  sample_chat_adoption.py  send_audio.py  test_script.py  vad.py
